Deliverable2Parser.py
# Generated from Deliverable2.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Deliverable2Parser ( Parser ):

    grammarFileName = "Deliverable2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'['", "','", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'('", "')'", "'if'", "':'", "'elif'", "'else:'", "'and'", 
                     "'or'", "'not'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VARNAME", "NUMBER", "STRING", "BOOLEAN", 
                      "NEWLINE", "COMMENT", "WS", "INDENT", "DEDENT", "SPACES" ]

    RULE_prog = 0
    RULE_s = 1
    RULE_simple_statement = 2
    RULE_assignment = 3
    RULE_array_assignment = 4
    RULE_expr = 5
    RULE_complex_statement = 6
    RULE_if_statement = 7
    RULE_elif_statement = 8
    RULE_else_statement = 9
    RULE_block = 10
    RULE_condition = 11
    RULE_logical_expr = 12
    RULE_not_expr = 13
    RULE_comparison_expr = 14

    ruleNames =  [ "prog", "s", "simple_statement", "assignment", "array_assignment", 
                   "expr", "complex_statement", "if_statement", "elif_statement", 
                   "else_statement", "block", "condition", "logical_expr", 
                   "not_expr", "comparison_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    VARNAME=29
    NUMBER=30
    STRING=31
    BOOLEAN=32
    NEWLINE=33
    COMMENT=34
    WS=35
    INDENT=36
    DEDENT=37
    SPACES=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Deliverable2Parser.EOF, 0)

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.SContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.SContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = Deliverable2Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Deliverable2Parser.T__15 or _la==Deliverable2Parser.VARNAME:
                self.state = 30
                self.s()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(Deliverable2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(Deliverable2Parser.Simple_statementContext,0)


        def complex_statement(self):
            return self.getTypedRuleContext(Deliverable2Parser.Complex_statementContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = Deliverable2Parser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_s)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Deliverable2Parser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.simple_statement()
                pass
            elif token in [Deliverable2Parser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.complex_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(Deliverable2Parser.AssignmentContext,0)


        def array_assignment(self):
            return self.getTypedRuleContext(Deliverable2Parser.Array_assignmentContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)




    def simple_statement(self):

        localctx = Deliverable2Parser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_statement)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.array_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(Deliverable2Parser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(Deliverable2Parser.ExprContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = Deliverable2Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(Deliverable2Parser.VARNAME)
                self.state = 47
                self.match(Deliverable2Parser.T__0)
                self.state = 48
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(Deliverable2Parser.VARNAME)
                self.state = 50
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Deliverable2Parser.T__1) | (1 << Deliverable2Parser.T__2) | (1 << Deliverable2Parser.T__3) | (1 << Deliverable2Parser.T__4))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 51
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(Deliverable2Parser.VARNAME, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.ExprContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_array_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_assignment" ):
                listener.enterArray_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_assignment" ):
                listener.exitArray_assignment(self)




    def array_assignment(self):

        localctx = Deliverable2Parser.Array_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(Deliverable2Parser.VARNAME)
            self.state = 55
            self.match(Deliverable2Parser.T__0)
            self.state = 56
            self.match(Deliverable2Parser.T__5)
            self.state = 57
            self.expr(0)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Deliverable2Parser.T__6:
                self.state = 58
                self.match(Deliverable2Parser.T__6)
                self.state = 59
                self.expr(0)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(Deliverable2Parser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(Deliverable2Parser.VARNAME, 0)

        def NUMBER(self):
            return self.getToken(Deliverable2Parser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(Deliverable2Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(Deliverable2Parser.STRING, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.ExprContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Deliverable2Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Deliverable2Parser.VARNAME]:
                self.state = 68
                self.match(Deliverable2Parser.VARNAME)
                pass
            elif token in [Deliverable2Parser.NUMBER]:
                self.state = 69
                self.match(Deliverable2Parser.NUMBER)
                pass
            elif token in [Deliverable2Parser.BOOLEAN]:
                self.state = 70
                self.match(Deliverable2Parser.BOOLEAN)
                pass
            elif token in [Deliverable2Parser.STRING]:
                self.state = 71
                self.match(Deliverable2Parser.STRING)
                pass
            elif token in [Deliverable2Parser.T__13]:
                self.state = 72
                self.match(Deliverable2Parser.T__13)
                self.state = 73
                self.expr(0)
                self.state = 74
                self.match(Deliverable2Parser.T__14)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Deliverable2Parser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 78
                    if not self.precpred(self._ctx, 6):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                    self.state = 79
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Deliverable2Parser.T__8) | (1 << Deliverable2Parser.T__9) | (1 << Deliverable2Parser.T__10) | (1 << Deliverable2Parser.T__11) | (1 << Deliverable2Parser.T__12))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 80
                    self.expr(7) 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Complex_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(Deliverable2Parser.If_statementContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_complex_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex_statement" ):
                listener.enterComplex_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex_statement" ):
                listener.exitComplex_statement(self)




    def complex_statement(self):

        localctx = Deliverable2Parser.Complex_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_complex_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.if_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(Deliverable2Parser.ConditionContext,0)


        def NEWLINE(self):
            return self.getToken(Deliverable2Parser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(Deliverable2Parser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(Deliverable2Parser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(Deliverable2Parser.DEDENT, 0)

        def elif_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.Elif_statementContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.Elif_statementContext,i)


        def else_statement(self):
            return self.getTypedRuleContext(Deliverable2Parser.Else_statementContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = Deliverable2Parser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(Deliverable2Parser.T__15)
            self.state = 89
            self.condition()
            self.state = 90
            self.match(Deliverable2Parser.T__16)
            self.state = 91
            self.match(Deliverable2Parser.NEWLINE)
            self.state = 92
            self.match(Deliverable2Parser.INDENT)
            self.state = 93
            self.block()
            self.state = 94
            self.match(Deliverable2Parser.DEDENT)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Deliverable2Parser.T__17:
                self.state = 95
                self.elif_statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Deliverable2Parser.T__18:
                self.state = 101
                self.else_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(Deliverable2Parser.ConditionContext,0)


        def NEWLINE(self):
            return self.getToken(Deliverable2Parser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(Deliverable2Parser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(Deliverable2Parser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(Deliverable2Parser.DEDENT, 0)

        def getRuleIndex(self):
            return Deliverable2Parser.RULE_elif_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_statement" ):
                listener.enterElif_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_statement" ):
                listener.exitElif_statement(self)




    def elif_statement(self):

        localctx = Deliverable2Parser.Elif_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elif_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(Deliverable2Parser.T__17)
            self.state = 105
            self.condition()
            self.state = 106
            self.match(Deliverable2Parser.T__16)
            self.state = 107
            self.match(Deliverable2Parser.NEWLINE)
            self.state = 108
            self.match(Deliverable2Parser.INDENT)
            self.state = 109
            self.block()
            self.state = 110
            self.match(Deliverable2Parser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(Deliverable2Parser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(Deliverable2Parser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(Deliverable2Parser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(Deliverable2Parser.DEDENT, 0)

        def getRuleIndex(self):
            return Deliverable2Parser.RULE_else_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_statement" ):
                listener.enterElse_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_statement" ):
                listener.exitElse_statement(self)




    def else_statement(self):

        localctx = Deliverable2Parser.Else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_else_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(Deliverable2Parser.T__18)
            self.state = 113
            self.match(Deliverable2Parser.NEWLINE)
            self.state = 114
            self.match(Deliverable2Parser.INDENT)
            self.state = 115
            self.block()
            self.state = 116
            self.match(Deliverable2Parser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.SContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.SContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = Deliverable2Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.s()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Deliverable2Parser.T__15 or _la==Deliverable2Parser.VARNAME):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self):
            return self.getTypedRuleContext(Deliverable2Parser.Logical_exprContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = Deliverable2Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.logical_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.Not_exprContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.Not_exprContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_logical_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expr" ):
                listener.enterLogical_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expr" ):
                listener.exitLogical_expr(self)




    def logical_expr(self):

        localctx = Deliverable2Parser.Logical_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logical_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.not_expr()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Deliverable2Parser.T__19 or _la==Deliverable2Parser.T__20:
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==Deliverable2Parser.T__19 or _la==Deliverable2Parser.T__20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.not_expr()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison_expr(self):
            return self.getTypedRuleContext(Deliverable2Parser.Comparison_exprContext,0)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_not_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_expr" ):
                listener.enterNot_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_expr" ):
                listener.exitNot_expr(self)




    def not_expr(self):

        localctx = Deliverable2Parser.Not_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_not_expr)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Deliverable2Parser.T__21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(Deliverable2Parser.T__21)
                self.state = 134
                self.comparison_expr()
                pass
            elif token in [Deliverable2Parser.T__13, Deliverable2Parser.VARNAME, Deliverable2Parser.NUMBER, Deliverable2Parser.STRING, Deliverable2Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.comparison_expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Deliverable2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Deliverable2Parser.ExprContext,i)


        def getRuleIndex(self):
            return Deliverable2Parser.RULE_comparison_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_expr" ):
                listener.enterComparison_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_expr" ):
                listener.exitComparison_expr(self)




    def comparison_expr(self):

        localctx = Deliverable2Parser.Comparison_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_comparison_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.expr(0)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Deliverable2Parser.T__22) | (1 << Deliverable2Parser.T__23) | (1 << Deliverable2Parser.T__24) | (1 << Deliverable2Parser.T__25) | (1 << Deliverable2Parser.T__26) | (1 << Deliverable2Parser.T__27))) != 0):
                self.state = 139
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Deliverable2Parser.T__22) | (1 << Deliverable2Parser.T__23) | (1 << Deliverable2Parser.T__24) | (1 << Deliverable2Parser.T__25) | (1 << Deliverable2Parser.T__26) | (1 << Deliverable2Parser.T__27))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 140
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         




